# CadenceLib

./: .gitignore  .gitmodules  CMakeLists.txt  CadenceLibQML_zh_CN.ts  README.md  XLogger.h  configctrl.cpp  configctrl.h  databasectrl.cpp  databasectrl.h  datademo.h  main.cpp  main.qml
.github/workflows/: windows.yml
include/: databasectrl.h
resource/: CadenceLibQML_zh_CN.ts  main.qml  qml.qrc
src/: configctrl.cpp  databasectrl.cpp  main.cpp
